<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false" tools:ignore="UnusedResources">crond</string>
    <string name="app_name_debug" translatable="false" tools:ignore="UnusedResources">crond debug</string>
    <string name="dialog_clean_title">Clear?</string>
    <string name="dialog_clean_message">Are you sure you want to clean this?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="button_label_clear">Clear log</string>
    <string name="button_label_enabled">Disable crond</string>
    <string name="button_label_disabled">Enable crond</string>
    <string name="run">Run</string>
    <string name="invalid_cron">Invalid cron expression</string>
    <string name="log_scheduled_v2">Scheduled line %1$d: \'%2$s\' at %3$s</string>
    <string name="log_execute_pre_v2">Execute line %1$d: \'%2$s\'</string>
    <string name="log_execute_post_v2">Executed line %1$d: \'%2$s\' exit code: %3$d</string>
    <string name="log_boot">Boot completed. Scheduling crontab:</string>
    <string name="log_crontab_change_detected">Crontab change detected. Scheduling new crontab:</string>
    <string name="crontab_label" translatable="false">crontab %s:</string>
    <string name="crond_log_label" translatable="false">crond log:</string>
    <string name="root_required">Root is required for this app to work.</string>
    <string name="reopen_hint">Open this app for changes to the crontab to be applied.</string>
    <string name="check_label_notification">Create notification after execution</string>
    <string name="check_label_wakelock">Use wake lock for script execution</string>
</resources>
