<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/root_layout">

    <TextView
        android:id="@+id/text_label_crontab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/root_required" />

    <TextView
        android:id="@+id/text_content_crontab"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/colorBackgroundInactive"
        android:layout_weight="0.5"
        android:scrollbars="vertical"
        android:textSize="11sp"
        android:text=""
        android:enabled="false"
        android:visibility="gone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/reopen_hint"
        android:enabled="false"
        android:visibility="gone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/crond_log_label"
        android:enabled="false"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/text_content_crond_log"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/colorBackgroundActive"
        android:layout_weight="0.5"
        android:scrollbars="vertical"
        android:textSize="11sp"
        android:text=""
        android:enabled="false"
        android:visibility="gone"/>

    <CheckBox
        android:id="@+id/check_notification_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_gravity="end"
        android:text="@string/check_label_notification"
        android:enabled="false"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:enabled="false"
        android:visibility="gone">
        <Button
            android:id="@+id/button_clear_log"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.5"
            android:text="@string/button_label_clear" />
        <Button
            android:id="@+id/button_enable"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.5"
            android:text="@string/button_label_disabled" />
    </LinearLayout>


</LinearLayout>
